--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "highcharts": "^10.1.0",
     "highcharts-vue": "^1.4.0",
     "jquery": "^3.6.0",
+    "keen-slider": "^6.6.14",
     "leaflet": "^1.8.0",
     "nouislider": "^15.6.0",
     "perfect-scrollbar": "^1.5.5",
