--- a/package.json
+++ b/package.json
@@ -38,18 +38,9 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.1.3",
     "@vitejs/plugin-vue": "^2.3.3",
-    "@vue/eslint-config-prettier": "^7.0.0",
-    "eslint": "^8.15.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-vue": "^9.0.1",
-    "prettier": "^2.6.2",
     "sass": "^1.51.0",
-    "vite": "^2.9.9",
-    "vue-eslint-parser": "^9.0.2"
+    "vite": "^2.9.9"
   },
   "type": "module",
   "packageManager": "yarn@3.2.1"
