--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue-multiselect": "3.0.0-alpha.2",
     "vue-router": "^4.0.15",
     "vue-toastification": "^2.0.0-rc.5",
+    "vueperslides": "^3.5.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
